--- a/static/html/default/templates/inventario/traslado_detalle.html
+++ b/static/html/default/templates/inventario/traslado_detalle.html
@@ -544,7 +544,7 @@
                     break;
                     case "2B":
                         /* Devoluciones sobre compras */
-                        uri = "/{systemModuleName}/inventario/devolucionesSobreCompras";
+                        uri = "/{systemModuleName}/inventario/salidas";
                     break;
                 }
                 /* ejecucion del recurso */
