--- a/static/html/default/templates/template_nofixed.html
+++ b/static/html/default/templates/template_nofixed.html
@@ -159,7 +159,7 @@
                         <a class="dropdown-toggle" href="#"><i class="icon-plus-2"></i> Más</a>
                         <ul class="dropdown-menu" data-role="dropdown">
                             <li><a href="/{systemModuleName}/inventario/catalogos"><i class="icon-broadcast"></i> Campañas</a></li>
-                            <!--<li><a href="/{systemModuleName}/inventario/kits"><i class="icon-layers"></i> Kits</a></li>-->
+                            <li><a href="/{systemModuleName}/inventario/kits"><i class="icon-layers"></i> Kits</a></li>
                             <li><a href="/{systemModuleName}/inventario/hoja_retaceo"><i class="icon-clipboard-2"></i> Hoja de retaceo</a></li>
                             <li><a href="/{systemModuleName}/inventario/movKardex"><i class="icon-clipboard"></i> Kardex</a></li>
                             <!--<li><a href="/{systemModuleName}/inventario/ofertas"><i class="icon-tag"></i> Ofertas</a></li> -->
