--- a/static/html/default/templates/inventario/kits.html
+++ b/static/html/default/templates/inventario/kits.html
@@ -58,9 +58,11 @@
 
 			if(response.existe){
                 window._vestilo = false;
-				$('#estilo').popover('show');	
+				$('#estilo').popover('show');
+                $('#div_estilo').removeClass("success-state");
 				$('#div_estilo').addClass("error-state");	
-			}else{
+			     
+            }else{
                 window._vestilo = true;
 				$('#div_estilo').removeClass("error-state");
 				$('#div_estilo').addClass("success-state");
@@ -74,11 +76,13 @@
 	});
 
 </script>
+
 <h2>Kit de productos</h2>
 
 <p>
 	<br />
 </p>
+
 <nav class="horizontal-menu compact">
     <ul>
         <li><a href="javascript: void(0);" onclick="$('#windowKits').css('display','block');"><i class="icon-search"></i> Buscar</a></li>
@@ -88,8 +92,7 @@
 <div class="tab-control" data-role="tab-control">
     <ul class="tabs">
 	    <li class="active"><a href="#_page_1">Nuevo kit</a></li>
-	    <li><a href="#_page_2">Armar Kit</a></li>
-	    <li><a href="#_page_3">Stock</a></li>
+	    <li><a href="#_page_2">Armar/Desarmar Kit</a></li>
     </ul>
      
     <div class="frames">
@@ -133,7 +136,7 @@
                 <input type="text" disabled="disabled" id="estilo_producto" onfocus="$('#windowProducto').css('display','block');" placeholder="Seleccionar producto"/>
             </div>
             <div class="input-control text span3">
-                <input type="text" disabled="disabled" id="cantidad_producto"  placeholder="Cantidad por kit"/>
+                <input type="text" disabled="disabled" id="cantidad_producto" onkeyup="numero(event);"  placeholder="Cantidad por kit"/>
             </div>
             <input type="hidden" id="h_estilo" />
             <input type="hidden" id="h_linea" />
@@ -148,7 +151,6 @@
                 </div>
             </div>
 	    </div>
-	    <div class="frame" id="_page_3">...</div>
     </div>
 </div>
 
@@ -183,6 +185,38 @@
 </div>
 
 <script type="text/javascript">
+    
+    function agregar_producto(){
+        
+        if($('#cantidad_producto').val()<=0 || $('#cantidad_producto').val().trim() == ""){
+        
+            alert("Ingrese una cantidad valida!");   
+        
+        }else{
+            
+            var  data = {
+                "estilo": $('#h_estilo').val(),
+                "linea": $('#h_linea').val(),
+                "kit": $('#armado_estilo').val(),
+                "cantidad": $('#cantidad_producto').val()
+            };   
+            
+            var uri = "/inventario/inventario/guardar_elemento_kit";
+            
+            $.post(uri, data, function(response){
+            
+                var loadUrl = '/{systemModuleName}/grid_tables/grid_kit_elementos_1?kit='+$('#armado_estilo').val();
+                var grid = Sigma.$grid("kit_grid");
+                grid.loadURL = loadUrl;    
+                grid.reload(); 
+                $('#estilo_producto').val("");
+                $('#cantidad_producto').val("");
+            },"json");
+        
+        }
+    }
+    
+    
     var grid_demo_id = "producto_grid";
     
     var dsOption = {
@@ -216,18 +250,22 @@
         $('#armado_estilo').val(estilo);
         $('#armado_estilo').attr("disabled", "disabled");
         $('#estilo_producto').removeAttr("disabled");
+        $('#cantidad_producto').removeAttr("disabled");
         $('#btnAgregarProducto').removeAttr("disabled");
-        var loadUrl = '/{systemModuleName}/grid_tables/grid_kit_elementos_1';
+        var loadUrl = '/{systemModuleName}/grid_tables/grid_kit_elementos_1?kit='+$('#armado_estilo').val();
         var grid = Sigma.$grid("kit_grid");
         grid.loadURL = loadUrl;    
         grid.reload();
     }
     
     function limpiar_estilo(){
+        $('#cantidad_producto').attr("disabled", "disabled");
         $('#estilo_producto').attr("disabled", "disabled");
         $('#btnAgregarProducto').attr("disabled", "disabled");
         $('#windowKits').css('display', 'none');
         $('#armado_estilo').val("");
+        $('#estilo_producto').val("");
+        $('#cantidad_producto').val("");
         $('#armado_estilo').removeAttr("disabled");
     }
     
@@ -266,23 +304,41 @@
     
     var dsOption2 = {
         fields :[
+            {name : 'id'},
             {name : 'estilo'},
-            {name : 'descripcion'},
-            {name : 'stock'},
-            {name : 'fecha_increso'},
-            {name : 'precio'}
+            {name : 'linea'},
+            {name : 'cantidad'}
         ],
         uniqueField: 1,
         recordType : 'object'
     }
 
     var colsOption2 = [
-        {id: 'estilo', header: "Código", width :75},
-        {id: 'descripcion', header: "Descripcion", width :225},
-        {id: 'precio', header: "($) Precio", width :70},
-        {id: 'stock', header: "Stock (Unidades)", width :125},
-        {id: 'fecha_ingreso', header: "Creado el", width :125}
+        {id: 'estilo', header: "Estilo", width :75},
+        {id: 'linea', header: "Linea", width :225},
+        {id: 'cantidad', header: "Cantidad", width :70},
+        {id: 'accion', header: "Acción", width: 100, renderer: eliminar_render}
     ];
+    
+    
+    function eliminar_render(value, record, columnObj, grid, colNo, rowNo){
+            
+        return '<a href="javascript: void(0);" onclick="eliminar_item(\''+record['id']+'\')">Eliminar</a>';
+    }
+    
+    
+    function eliminar_item(id_item){
+        
+        var uri  = "/inventario/inventario/eliminar_item_kit";
+        var data = {"id": id_item};
+        
+        $.post(uri, data, function(response){
+            var loadUrl = '/{systemModuleName}/grid_tables/grid_kit_elementos_1?kit='+$('#armado_estilo').val();
+            var grid = Sigma.$grid("kit_grid");
+            grid.loadURL = loadUrl;    
+            grid.reload();
+        }, "json");
+    }
     
     var gridOption2 = {
         id : grid_elementos_id,
@@ -313,6 +369,7 @@
     });
 
 </script>
+
 <script>
     var grid_producto_id = "items_grid";
     
@@ -320,9 +377,6 @@
         fields :[
             {name : 'estilo'},
             {name : 'linea'},
-            {name:  'color'},
-            {name:  'color_nombre'},
-            {name:  'talla'},
             {name:  'stock'},
             {name:  'precio'}
         ],
@@ -333,8 +387,6 @@
     var colsOption3 = [
         {id: 'estilo', header: "Estilo", width :60},
         {id: 'linea', header: "Linea", width  :50},
-        {id: 'color_nombre', header: "Color", width :110},
-        {id: 'talla', header: "Talla", width :50},
         {id: 'stock', header: "Stock", width :70},
         {id: 'precio', header: "Precio", width :70},
         {id: 'descripcion', header: "Descripcion", width :230},
@@ -347,12 +399,10 @@
     }
     
     function sel_producto(descripcion, estilo, linea, color, talla){
-        $('#estilo_producto').val(descripcion +"("+linea+"-"+estilo+"-"+color+"-"+talla+"-)");
+        $('#estilo_producto').val(descripcion +"//"+linea+"//"+estilo);
         $('#windowProducto').css('display','none');
         $('#h_estilo').val(estilo);
         $('#h_linea').val(linea);
-        $('#h_color').val(color);
-        $('#h_talla').val(talla);
     }
     
     var gridOption3 = {
