--- a/static/html/default/templates/inventario/traslado_detalle.html
+++ b/static/html/default/templates/inventario/traslado_detalle.html
@@ -368,7 +368,8 @@
         allowCustomSkin: true,
         skin: 'mac',
         clickStartEdit : true,
-        defaultRecord : {'id':"00", 'nombre':""},
+        remotePaging : true,
+        autoLoad: false,
         pageSize:10,
         toolbarContent : 'reload | filter | nav state'
     };
