--- a/static/html/default/templates/inventario/traslado_detalle.html
+++ b/static/html/default/templates/inventario/traslado_detalle.html
@@ -247,7 +247,7 @@
     /* funcion que aplica el filtro de linea */
     function func()
     {
-        $('#slinea').change();
+        //$('#slinea').change();
     }
 
 
